@@ -41,10 +41,10 @@ parts +=
 ##############################################################################
 
 [domains]
-main = adhocracy.lan
+wsgi = 127.0.0.1
 
 [ports]
-main = 5001
+wsgi = 5001
 supervisor = 5010
 
 ##############################################################################
@@ -52,15 +52,14 @@ supervisor = 5010
 ##############################################################################
 
 [adhocracy]
+domain = adhocracy.lan
 #start adhocracy in debug mode
 debug = False
 #TODO use geo features (You also need to include postgres_with_postgis instead of postgres)
 geo = False
 # theme adhocracy with diazo and merge a wordpress blog.
 themed = False
-
 protocol = http
-host = 127.0.0.1
 #Session secret, replace this with a randomly generated hash value or use "autogenerated" to let
 #buildout do the job
 secret = autogenerated
