@@ -37,17 +37,16 @@ eggs += ZopeSkel
 
 [adhocracy]
 debug = True
+# generate internal urls with port 5001 to be able to work without a
+# proxy (e.g. apache with ReverseProxy, see /etc/vhost.ini.in)
+# on a port != 80
+force_port = True
 smtp_port = 8825
 relative_urls = True
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 
 [ports]
 mailserver_port = ${adhocracy:smtp_port}
-[domains]
-# generate internal urls with port 5001 to be able to work without a
-# proxy (e.g. apache with ReverseProxy, see /etc/vhost.ini.in)
-# on a port != 80
-main.force_port = True
 
 [supervisor]
 programs -=
