@@ -21,10 +21,10 @@ adhocracy-supervisor =
 ##############################################################################
 
 [domains]
-uwsgi = 127.0.0.1
+wsgi = 127.0.0.1
  
 [ports]
-uwsgi = 5008
+wsgi = 5001
  
 [urls]
 uwsgi = http://projects.unbit.it/downloads/uwsgi-1.9.12.tar.gz
@@ -70,10 +70,10 @@ mode = 755
 conf =
     #basics
 
-    http = ${adhocracy:host}:${ports:main} 
+    http = ${domains:wsgi}:${ports:wsgi} 
     pidfile = ${buildout:directory}/var/uwsgi.pid 
     master = true
-    chdir =  ${buildout:directory}/src
+    chdir = ${buildout:directory}/src
     home = ${buildout:directory}
 
     # extended
